system room and player 1
create and join room
create player

--- a/font-end/www/index.html
+++ b/font-end/www/index.html
@@ -86,8 +86,9 @@
                 point2
             </div>
         </div>
-
     </div>
+
+    <a href="home.html">home</a>
 </body>
 
 <script type="text/javascript" src="./src/random_card.js"></script>
