--- a/font-end/www/game_play.html
+++ b/font-end/www/game_play.html
@@ -76,4 +76,16 @@
 <script type="text/javascript" src="./src/random_card.js"></script>
 <script type="text/javascript" src="./src/gamePlay.js"></script>
 
+<script src="./node_modules/socket.io-client/dist/socket.io.js"></script>
+<script>
+    var socket = io("http://localhost:7000");
+    // socket.emit('chat message', 'Hello name olapat');
+    socket.on('return', (mgn) => {
+        console.log(mgn)
+    });
+    socket.on('return2', (mgn) => {
+        console.log(mgn)
+    });
+</script>
+
 </html>
